[tool.poetry]
name = "short-url"
version = "0.1.0"
description = "test poetry and yesno api"
license = "MIT"
authors = ["ikura1"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
black = {version = "^18.3-alpha.0", allows-prereleases = true}
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"